--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "classmap": [
             "database"
         ],
+        "files": [
+            "resources/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         }
