--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "themsaid/laravel-model-transformers": "^1.0"
+        "themsaid/laravel-model-transformers": "^1.0",
+        "mnapoli/front-yaml": "^1.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
