--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravelcollective/bus": "^5.2",
         "maatwebsite/excel": "~2.1.0",
         "laravelcollective/html": "5.2.*",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
