--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "maatwebsite/excel": "~2.1.0",
         "laravelcollective/html": "5.2.*",
         "guzzlehttp/guzzle": "^6.2",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "flynsarmy/csv-seeder": "1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
